syntax = "proto3";
package pb;

import "github.com/coreos/etcd/raft/raftpb/raft.proto";
import "transport/ptarmiganpb/ptarmigan.proto";
import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;

service Flock {
    rpc ApplySnapshot(stream ptarmiganpb.Chunk) returns (ptarmiganpb.Empty);
    rpc SendMessages(RaftMessages) returns (ptarmiganpb.Empty);
}
